--- a/app/src/main/res/layout/activity_gate_order_detail.xml
+++ b/app/src/main/res/layout/activity_gate_order_detail.xml
@@ -346,7 +346,7 @@
                 <TextView
                     android:layout_width="@dimen/value_80dp"
                     android:layout_height="wrap_content"
-                    android:text="金额："
+                    android:text="费用："
                     android:textColor="@color/txt_666666"
                     android:textSize="@dimen/value_14sp" />
 
@@ -354,11 +354,31 @@
                     android:id="@+id/gate_order_detail_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="00元"
+                    android:text=""
                     android:textColor="@color/txt_orange"
                     android:textSize="@dimen/value_14sp" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/value_3dp"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="@dimen/value_80dp"
+                    android:layout_height="wrap_content"
+                    android:text="打赏金额："
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
+
+                <TextView
+                    android:id="@+id/gate_order_detail_ward_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textColor="@color/txt_orange"
+                    android:textSize="@dimen/value_14sp" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -406,6 +426,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:layout_marginTop="@dimen/value_3dp">
 
                 <TextView
