--- a/app/src/main/res/layout/activity_shun_feng_che.xml
+++ b/app/src/main/res/layout/activity_shun_feng_che.xml
@@ -57,7 +57,30 @@
                         android:textColor="@color/txt_333333"
                         android:textSize="@dimen/value_14sp" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/value_3dp"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/txt_333333"
+                        android:textSize="@dimen/value_12sp"
+                        android:text="详细地址:"/>
+
+                    <EditText
+                        android:id="@+id/shun_feng_che_from_location_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/value_10dp"
+                        android:hint="例如:门牌号、楼层"
+                        android:textColor="@color/txt_333333"
+                        android:background="@android:color/transparent"
+                        android:textSize="@dimen/value_12sp" />
+                </LinearLayout>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/value_1dp"
@@ -86,7 +109,30 @@
                         android:textColor="@color/txt_333333"
                         android:textSize="@dimen/value_14sp" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/value_3dp"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/txt_333333"
+                        android:textSize="@dimen/value_12sp"
+                        android:text="详细地址:"/>
+
+                    <EditText
+                        android:id="@+id/shun_feng_che_to_location_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/value_10dp"
+                        android:hint="例如:门牌号、楼层"
+                        android:textColor="@color/txt_333333"
+                        android:background="@android:color/transparent"
+                        android:textSize="@dimen/value_12sp" />
+                </LinearLayout>
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/value_1dp"
