--- a/app/src/main/res/layout/activity_user_help.xml
+++ b/app/src/main/res/layout/activity_user_help.xml
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="法律条款"
+            android:text="用户注册协议"
             android:textColor="@color/txt_333333" />
 
         <ImageView
