--- a/app/src/main/res/layout/b_personinfo_layout.xml
+++ b/app/src/main/res/layout/b_personinfo_layout.xml
@@ -206,7 +206,46 @@
         android:layout_height="10dp"
         android:background="#f2f1f1"
         />
+    <RelativeLayout
+        android:id="@+id/person_info_car_num_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/value_40dp"
+        android:paddingLeft="@dimen/value_10dp"
+        android:background="#fff"
+        android:paddingRight="@dimen/value_10dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="车牌号"
+            android:textColor="@color/txt_666666" />
+
+        <ImageView
+            android:id="@+id/person_info_car_num_right_img"
+            android:layout_width="@dimen/value_10dp"
+            android:layout_height="@dimen/value_20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/right_direction_grey" />
+
+        <TextView
+            android:id="@+id/person_info_car_num_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/value_10dp"
+            android:layout_toLeftOf="@+id/person_info_car_num_right_img"
+            android:text=""
+            android:textColor="@color/txt_999999" />
+    </RelativeLayout>
+
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/value_1dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/divider_line_horizonal" />
     <RelativeLayout
         android:id="@+id/person_info_car_type_layout"
         android:layout_width="match_parent"
