--- a/app/src/main/res/layout/find_labour_list_group_item.xml
+++ b/app/src/main/res/layout/find_labour_list_group_item.xml
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="需:"
+                    android:text="劳力信息:"
                     android:textColor="@color/main_color" />
 
                 <TextView
