--- a/app/src/main/res/layout/b_gpssafecenter_layout.xml
+++ b/app/src/main/res/layout/b_gpssafecenter_layout.xml
@@ -99,7 +99,7 @@
                         android:id="@+id/open_close"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="关闭防盗模式"
+                        android:text="防盗模式关闭"
                         android:textColor="@color/txt_white"
                         android:textSize="@dimen/value_16sp" />
 
