--- a/app/src/main/res/layout/businessinfo_list_group_item.xml
+++ b/app/src/main/res/layout/businessinfo_list_group_item.xml
@@ -32,6 +32,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/businessinfo_list_item_type_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="需:"
@@ -52,6 +53,25 @@
                 android:layout_height="wrap_content"
                 android:text="2016-5-25 16：00"
                 android:textColor="@color/txt_666666" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="联系方式："
+                    android:textColor="@color/txt_666666"
+                    />
+                <TextView
+                    android:id="@+id/businessinfo_list_item_contact_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:textColor="@color/text_greeen"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
 
