--- a/app/src/main/res/layout/sell_thing_list_group_item.xml
+++ b/app/src/main/res/layout/sell_thing_list_group_item.xml
@@ -39,7 +39,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="卖:"
+                        android:text="买卖信息:"
                         android:textColor="@color/main_color" />
 
                     <TextView
