--- a/app/src/main/res/layout/b_address_layout.xml
+++ b/app/src/main/res/layout/b_address_layout.xml
@@ -19,7 +19,7 @@
             android:padding="@dimen/value_10dp">
 
             <EditText
-                android:id="@+id/modify_proviceId"
+                android:id="@+id/modify_address"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/value_30dp"
                 android:textColor="@color/txt_333333"
@@ -34,25 +34,6 @@
             android:layout_marginLeft="@dimen/value_10dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/divider_line_horizonal" />
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/txt_white"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:visibility="gone"-->
-            <!--android:padding="@dimen/value_10dp">-->
-
-            <!--<EditText-->
-                <!--android:id="@+id/modify_address"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="@dimen/value_30dp"-->
-                <!--android:textColor="@color/txt_333333"-->
-                <!--android:textSize="@dimen/value_14sp"-->
-                <!--android:hint="详细地址"-->
-                <!--android:background="@color/txt_white" />-->
-        <!--</LinearLayout>-->
 
     </LinearLayout>
 
