--- a/app/src/main/res/layout/activity_gate_to_gate.xml
+++ b/app/src/main/res/layout/activity_gate_to_gate.xml
@@ -582,43 +582,43 @@
         </RelativeLayout>
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/gate_to_gate_after_order_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:visibility="gone">
+    <!--<FrameLayout-->
+        <!--android:id="@+id/gate_to_gate_after_order_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:visibility="gone">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/value_10dp"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="@dimen/value_10dp"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:id="@+id/gate_to_gate_after_order_put"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/value_5dp"
-                android:background="@mipmap/after_order_txt_back"
-                android:gravity="center"
-                android:text="放入订单"
-                android:textColor="@color/txt_white"
-                android:textSize="@dimen/value_18sp" />
+            <!--<TextView-->
+                <!--android:id="@+id/gate_to_gate_after_order_put"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="@dimen/value_5dp"-->
+                <!--android:background="@mipmap/after_order_txt_back"-->
+                <!--android:gravity="center"-->
+                <!--android:text="放入订单"-->
+                <!--android:textColor="@color/txt_white"-->
+                <!--android:textSize="@dimen/value_18sp" />-->
 
-            <TextView
-                android:id="@+id/gate_to_gate_after_order_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/value_5dp"
-                android:background="@mipmap/after_order_txt_back"
-                android:gravity="center"
-                android:text="取消订单"
-                android:textColor="@color/txt_white"
-                android:textSize="@dimen/value_18sp" />
-        </LinearLayout>
-    </FrameLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/gate_to_gate_after_order_cancel"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="@dimen/value_5dp"-->
+                <!--android:background="@mipmap/after_order_txt_back"-->
+                <!--android:gravity="center"-->
+                <!--android:text="取消订单"-->
+                <!--android:textColor="@color/txt_white"-->
+                <!--android:textSize="@dimen/value_18sp" />-->
+        <!--</LinearLayout>-->
+    <!--</FrameLayout>-->
 
     <FrameLayout
         android:id="@+id/gate_to_gate_ensure_order_layout"
