--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/main_city_name_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="北京"
+                    android:text=""
                     android:textColor="@color/txt_white"
                     android:textSize="@dimen/value_18sp" />
 
