--- a/app/src/main/res/layout/activity_shun_feng_che.xml
+++ b/app/src/main/res/layout/activity_shun_feng_che.xml
@@ -395,17 +395,27 @@
                 android:layout_marginBottom="@dimen/value_10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
-
                 <TextView
-                    android:id="@+id/shun_feng_che_cancle_order_put"
+                    android:id="@+id/shun_feng_che_order_put"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/value_5dp"
-                    android:background="@mipmap/publish_ensure_back"
+                    android:background="@mipmap/after_order_txt_back"
+                    android:gravity="center"
+                    android:text="放入订单"
+                    android:textColor="@color/txt_white"
+                    android:textSize="@dimen/value_18sp" />
+                <TextView
+                    android:id="@+id/shun_feng_che_order_cancle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/value_5dp"
+                    android:background="@mipmap/after_order_txt_back"
                     android:gravity="center"
                     android:text="取消订单"
                     android:textColor="@color/txt_white"
                     android:textSize="@dimen/value_18sp" />
+
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
