--- a/app/src/main/res/layout/activity_shun_feng_order_detail.xml
+++ b/app/src/main/res/layout/activity_shun_feng_order_detail.xml
@@ -221,7 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="@color/txt_666666"
+                android:textColor="@color/text_greeen"
                 android:textSize="@dimen/value_14sp" />
         </LinearLayout>
 
