--- a/app/src/main/res/layout/b_guiji_layout.xml
+++ b/app/src/main/res/layout/b_guiji_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="#fff"
+    android:orientation="vertical">
 
 
     <RelativeLayout
@@ -15,66 +15,72 @@
         <com.baidu.mapapi.map.MapView
             android:id="@+id/mapViewId"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
         </com.baidu.mapapi.map.MapView>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#60000000"
             android:layout_alignParentBottom="true"
-            >
+            android:background="#60000000">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/value_20dp"
-                    android:paddingLeft="@dimen/value_10dp"
-                    android:paddingRight="@dimen/value_10dp"
+                    android:background="#000000"
                     android:gravity="center_vertical"
-                    android:background="#000000">
+                    android:paddingLeft="@dimen/value_10dp"
+                    android:paddingRight="@dimen/value_10dp">
 
-                    <ProgressBar
-                        android:id="@+id/progressBarId"
+                    <!--<ProgressBar-->
+                    <!--android:id="@+id/progressBarId"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="@dimen/value_5dp"-->
+                    <!--style="@style/ProgressBar_Mini"-->
+                    <!--android:progress="0"-->
+                    <!--/>-->
+                    <SeekBar
+                        android:id="@+id/seekBarId"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/value_5dp"
-                        style="@style/ProgressBar_Mini"
-                        android:max="100"
-                        android:progress="10"
+                        android:layout_height="@dimen/value_20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:maxHeight="8.0dip"
+                        android:minHeight="8.0dip"
+                        android:progressDrawable="@drawable/progress_holo_light"
+                        android:thumb="@mipmap/detail_icon_schedule_ball"
                         />
-
                 </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/value_10dp"
-                    >
+                    android:padding="@dimen/value_10dp">
 
                     <CheckBox
                         android:id="@+id/guiji_checkbox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
                         android:background="@drawable/guiji_btn_bg"
                         android:button="@null"
-                        android:checked="false"
-                        android:layout_centerInParent="true"
-                        />
+                        android:checked="false" />
 
                     <RelativeLayout
                         android:layout_width="@dimen/value_80dp"
                         android:layout_height="@dimen/value_30dp"
-                        android:background="@mipmap/guiji_time_bg"
                         android:layout_alignParentRight="true"
-                        android:gravity="center_vertical"
-                        >
+                        android:background="@mipmap/guiji_time_bg"
+                        android:gravity="center_vertical">
 
-                        <Spinner android:id="@+id/spinnerId"
+                        <Spinner
+                            android:id="@+id/spinnerId"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="#00ffffff">
@@ -82,15 +88,14 @@
                         </Spinner>
 
                         <ImageView
-                            android:src="@mipmap/guiji_up_img"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
                             android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginBottom="@dimen/value_5dp"
                             android:layout_marginRight="@dimen/value_5dp"
-                            android:layout_marginBottom="@dimen/value_5dp"/>
+                            android:src="@mipmap/guiji_up_img" />
                     </RelativeLayout>
-
 
 
                 </RelativeLayout>
@@ -104,17 +109,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/value_200dp"
-        android:padding="@dimen/value_10dp"
         android:orientation="vertical"
-        >
+        android:padding="@dimen/value_10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="轨迹统计"
             android:textColor="@color/txt_333333"
-            android:textSize="@dimen/value_16sp"
-            />
+            android:textSize="@dimen/value_16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,8 +130,7 @@
                 android:layout_height="wrap_content"
                 android:text="行程"
                 android:textColor="@color/txt_999999"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
 
             <TextView
@@ -137,8 +139,7 @@
                 android:layout_height="wrap_content"
                 android:text="0km"
                 android:textColor="@color/main_color"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
         </LinearLayout>
 
@@ -153,8 +154,7 @@
                 android:layout_height="wrap_content"
                 android:text="最高时速"
                 android:textColor="@color/txt_999999"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
 
             <TextView
@@ -163,16 +163,14 @@
                 android:layout_height="wrap_content"
                 android:text="0km/h"
                 android:textColor="@color/main_color"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=",平均时速"
                 android:textColor="@color/txt_999999"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
 
             <TextView
@@ -181,8 +179,7 @@
                 android:layout_height="wrap_content"
                 android:text="0km/h"
                 android:textColor="@color/main_color"
-                android:textSize="@dimen/value_16sp"
-                />
+                android:textSize="@dimen/value_16sp" />
 
 
         </LinearLayout>
@@ -190,8 +187,7 @@
         <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </lecho.lib.hellocharts.view.LineChartView>
+            android:layout_height="match_parent"></lecho.lib.hellocharts.view.LineChartView>
 
 
     </LinearLayout>
