--- a/app/src/main/res/layout/b_hitchhiking_layout.xml
+++ b/app/src/main/res/layout/b_hitchhiking_layout.xml
@@ -231,7 +231,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="13510625920"
-                    android:textColor="@color/txt_333333"
+                    android:textColor="@color/text_greeen"
                     android:textSize="@dimen/value_16sp"
                     />
 
