--- a/app/src/main/res/layout/b_takeorder_head.xml
+++ b/app/src/main/res/layout/b_takeorder_head.xml
@@ -422,7 +422,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="@color/txt_333333"
+                    android:textColor="@color/text_greeen"
                     android:textSize="@dimen/value_16sp"
                     />
 
