--- a/app/src/main/res/layout/businessinfo_list_group_item.xml
+++ b/app/src/main/res/layout/businessinfo_list_group_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/txt_white"
     android:orientation="vertical"
     android:paddingLeft="@dimen/value_10dp"
@@ -24,6 +24,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/sell_thing_list_group_delete"
             android:orientation="vertical">
 
             <LinearLayout
@@ -47,30 +48,60 @@
                     android:textColor="@color/txt_333333" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/sell_thing_list_group_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2016-5-25 16：00"
-                android:textColor="@color/txt_666666" />
+            <LinearLayout
+                android:id="@+id/sell_thing_list_group_server_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="服务时间："
+                    android:textColor="@color/txt_666666" />
+
+                <TextView
+                    android:id="@+id/sell_thing_list_group_server_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2016-5-25 16：00"
+                    android:textColor="@color/txt_666666" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="发布时间："
+                    android:textColor="@color/txt_666666" />
+
+                <TextView
+                    android:id="@+id/sell_thing_list_group_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2016-5-25 16：00"
+                    android:textColor="@color/txt_666666" />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="联系方式："
-                    android:textColor="@color/txt_666666"
-                    />
+                    android:textColor="@color/txt_666666" />
+
                 <TextView
                     android:id="@+id/businessinfo_list_item_contact_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" "
-                    android:textColor="@color/text_greeen"
-                    />
+                    android:textColor="@color/text_greeen" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
@@ -89,16 +120,14 @@
         android:layout_marginBottom="@dimen/value_5dp"
         android:layout_marginTop="@dimen/value_5dp"
         android:orientation="horizontal"
-        android:weightSum="3"
-        >
+        android:weightSum="3">
 
         <ImageView
             android:id="@+id/sell_thing_list_group_pic1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/sell_thing_list_group_pic2"
@@ -107,16 +136,14 @@
             android:layout_marginLeft="@dimen/value_10dp"
             android:layout_marginRight="@dimen/value_10dp"
             android:layout_weight="1"
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/sell_thing_list_group_pic3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY" />
     </LinearLayout>
 
     <LinearLayout
@@ -158,9 +185,9 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/value_5dp"
-            android:layout_toRightOf="@+id/group_item_location_tag"
-            android:layout_toLeftOf="@+id/sell_thing_list_group_edit"
             android:layout_marginRight="@dimen/value_3dp"
+            android:layout_toLeftOf="@+id/sell_thing_list_group_edit"
+            android:layout_toRightOf="@+id/group_item_location_tag"
             android:singleLine="true"
             android:text="地址：深圳市科技园"
             android:textColor="@color/txt_666666" />
