--- a/app/src/main/res/layout/find_labour_list_group_item.xml
+++ b/app/src/main/res/layout/find_labour_list_group_item.xml
@@ -23,6 +23,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/find_labour_list_group_delete"
             android:orientation="vertical">
 
             <LinearLayout
