--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,29 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/main_city_name_txt"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/txt_white"
-                    android:textSize="@dimen/value_18sp" />
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/main_city_name_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:textColor="@color/txt_white"
+                        android:textSize="@dimen/value_14sp" />
+
+                    <TextView
+                        android:id="@+id/main_district_name_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:textColor="@color/txt_white"
+                        android:textSize="@dimen/value_14sp" />
+                </LinearLayout>
+
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -209,9 +225,9 @@
                 android:id="@+id/main_my_orders"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/value_6dp"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
@@ -224,36 +240,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/value_2dp"
-                    android:textSize="@dimen/value_14sp"
                     android:text="我的订单"
-                    android:textColor="@color/txt_666666" />
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/value_3dp"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:layout_marginBottom="@dimen/value_3dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/logo_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/main_bottom_logo"
                     android:scaleType="centerCrop"
-                    />
+                    android:src="@mipmap/main_bottom_logo" />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/main_my_messages"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/value_6dp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <RelativeLayout
@@ -274,9 +289,9 @@
                         android:background="@mipmap/main_bottom_red_tag"
                         android:gravity="center"
                         android:text="1"
-                        android:visibility="gone"
                         android:textColor="@color/txt_white"
-                        android:textSize="@dimen/value_12sp" />
+                        android:textSize="@dimen/value_12sp"
+                        android:visibility="gone" />
                 </RelativeLayout>
 
                 <TextView
@@ -284,8 +299,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/value_2dp"
                     android:text="我的消息"
-                    android:textSize="@dimen/value_14sp"
-                    android:textColor="@color/txt_666666" />
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
