--- a/app/src/main/res/layout/b_activity_main.xml
+++ b/app/src/main/res/layout/b_activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/txt_white"
     android:orientation="vertical">
 
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/value_48dp"
@@ -27,18 +28,18 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_centerInParent="true"
-                >
+                android:orientation="vertical">
+
                 <RadioGroup
                     android:id="@+id/radioGroupId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:background="@mipmap/radiogroup_bg"
-                    android:padding="@dimen/value_1dp"
+                    android:layout_marginLeft="@dimen/value_10dp"
                     android:layout_marginRight="@dimen/value_10dp"
-                    android:layout_marginLeft="@dimen/value_10dp">
+                    android:background="@mipmap/radiogroup_bg"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/value_1dp">
 
                     <RadioButton
                         android:id="@+id/jiedanId"
@@ -48,18 +49,16 @@
                         android:background="@drawable/radio_btn_left"
                         android:button="@null"
                         android:checked="true"
-                        android:gravity="center"
-                        />
+                        android:gravity="center" />
 
                     <RadioButton
                         android:id="@+id/dingdanId"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:background="@drawable/radio_btn_right"
                         android:button="@null"
-                        android:gravity="center"
-                        android:layout_gravity="center"
-                        />
+                        android:gravity="center" />
                 </RadioGroup>
 
             </LinearLayout>
@@ -73,13 +72,29 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvLocationId"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/txt_white"
-                    android:textSize="@dimen/value_18sp" />
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tvLocationId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:textColor="@color/txt_white"
+                        android:textSize="@dimen/value_14sp" />
+
+                    <TextView
+                        android:id="@+id/tvDistrictId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" "
+                        android:textColor="@color/txt_white"
+                        android:textSize="@dimen/value_14sp" />
+                </LinearLayout>
+
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -92,83 +107,74 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:background="#f2f1f1"
-            android:padding="@dimen/value_10dp"
             android:gravity="center"
-            >
+            android:orientation="vertical"
+            android:padding="@dimen/value_10dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="今日业绩"
-                android:textSize="@dimen/value_16sp"
-                android:textColor="@color/txt_000000"
                 android:layout_marginBottom="@dimen/value_5dp"
-                />
+                android:text="今日业绩"
+                android:textColor="@color/txt_000000"
+                android:textSize="@dimen/value_16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:gravity="center"
-                >
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="今日接单："
-                    android:textSize="@dimen/value_14sp"
-                    android:textColor="@color/txt_666666"
                     android:layout_marginRight="@dimen/value_5dp"
-                    />
+                    android:text="今日接单："
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
 
                 <TextView
                     android:id="@+id/tvDanId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="6"
-                    android:textSize="@dimen/value_14sp"
                     android:textColor="@color/txt_orange"
-                    />
+                    android:textSize="@dimen/value_14sp" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="单"
-                    android:textSize="@dimen/value_14sp"
-                    android:textColor="@color/txt_666666"
                     android:layout_marginRight="@dimen/value_20dp"
-                    />
+                    android:text="单"
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="今日收入："
-                    android:textSize="@dimen/value_14sp"
-                    android:textColor="@color/txt_666666"
                     android:layout_marginRight="@dimen/value_5dp"
-                    />
+                    android:text="今日收入："
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
 
                 <TextView
                     android:id="@+id/tvMoneyId"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="265"
-                    android:textSize="@dimen/value_14sp"
                     android:textColor="@color/txt_orange"
-                    />
+                    android:textSize="@dimen/value_14sp" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="元"
-                    android:textSize="@dimen/value_14sp"
-                    android:textColor="@color/txt_666666"
                     android:layout_marginRight="@dimen/value_20dp"
-                    />
+                    android:text="元"
+                    android:textColor="@color/txt_666666"
+                    android:textSize="@dimen/value_14sp" />
 
             </LinearLayout>
 
@@ -211,10 +217,10 @@
                     android:id="@+id/businessMessageId"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="@dimen/value_6dp"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical">
 
                     <RelativeLayout
@@ -236,8 +242,8 @@
                             android:gravity="center"
                             android:text=""
                             android:textColor="@color/txt_white"
-                            android:visibility="gone"
-                            android:textSize="@dimen/value_12sp" />
+                            android:textSize="@dimen/value_12sp"
+                            android:visibility="gone" />
                     </RelativeLayout>
 
                     <TextView
@@ -245,17 +251,17 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/value_2dp"
                         android:text="商业信息白板"
-                        android:textSize="@dimen/value_14sp"
-                        android:textColor="@color/txt_666666" />
+                        android:textColor="@color/txt_666666"
+                        android:textSize="@dimen/value_14sp" />
                 </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
                     android:layout_marginBottom="@dimen/value_3dp"
                     android:layout_marginTop="@dimen/value_5dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
 
 
@@ -263,17 +269,16 @@
                         android:id="@+id/zhuandongId"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@mipmap/zhuandong"
-                        android:layout_centerInParent="true"/>
+                        android:layout_centerInParent="true"
+                        android:src="@mipmap/zhuandong" />
 
                     <CheckBox
                         android:id="@+id/orderBox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/start_order_bg"
-                        android:button="@null"
                         android:layout_centerInParent="true"
-                        />
+                        android:background="@drawable/start_order_bg"
+                        android:button="@null" />
 
                 </RelativeLayout>
 
@@ -281,9 +286,9 @@
                     android:id="@+id/safeCenterId"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_gravity="bottom"
                     android:layout_marginBottom="@dimen/value_6dp"
+                    android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
 
@@ -296,9 +301,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/value_2dp"
-                        android:textSize="@dimen/value_14sp"
                         android:text="摩小三安全中心"
-                        android:textColor="@color/txt_666666" />
+                        android:textColor="@color/txt_666666"
+                        android:textSize="@dimen/value_14sp" />
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
