--- a/app/src/main/res/layout/b_gpssafecenter_layout.xml
+++ b/app/src/main/res/layout/b_gpssafecenter_layout.xml
@@ -14,11 +14,11 @@
             android:id="@+id/main_user_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:paddingTop="@dimen/value_5dp"
+            android:layout_centerVertical="true"
             android:paddingBottom="@dimen/value_5dp"
             android:paddingRight="@dimen/value_20dp"
-            android:layout_centerVertical="true"
+            android:paddingTop="@dimen/value_5dp"
+            android:scaleType="centerCrop"
             android:src="@mipmap/main_user_photo" />
 
         <TextView
@@ -38,13 +38,29 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvLocationId"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/txt_white"
-                android:textSize="@dimen/value_18sp" />
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvLocationId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:textColor="@color/txt_white"
+                    android:textSize="@dimen/value_14sp" />
+
+                <TextView
+                    android:id="@+id/tvDistrictId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" "
+                    android:textColor="@color/txt_white"
+                    android:textSize="@dimen/value_14sp" />
+            </LinearLayout>
+
 
             <ImageView
                 android:layout_width="wrap_content"
